# SINBA-ResNet

./: README.md  pyproject.toml
SINBA/: data_set_creator.py  experiment.py  residual_block.py  variables_calculator.py
source/SINBA/: __init__.py  dataset_creator.py  experiment.py  residual_block.py  variables_calculator.py
